# capsicum-rs

./: .cirrus.yml  Cargo.toml
cap_grp/: Cargo.toml
cap_grp-sys/: Cargo.toml  build.rs
cap_grp-sys/bindgen/: bindgen.sh  wrapper.h
cap_grp-sys/src/: ffi.rs  lib.rs
cap_grp/src/: lib.rs
capsicum/: Cargo.toml
capsicum/examples/: getuid.rs
capsicum/src/: lib.rs
capsicum/src/casper/: mod.rs
casper-sys/: Cargo.toml
casper-sys/bindgen/: bindgen.sh  wrapper.h
casper-sys/src/: ffi.rs  lib.rs
src/: lib.rs
src/casper/: cap_sysctl.rs  mod.rs
tests/: lib.rs
