[package]
name = "capsicum"
edition = "2021"
version = "0.1.3"
authors = ["Daniel Robertson <dan.robertson@anidata.org>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
rust-version = "1.62"
description = """
Simple intuitive Rust bindings for the FreeBSD capsicum framework
"""
build = "build.rs"
readme = "README.md"
keywords = ["sandbox", "FreeBSD", "capsicum"]

include = ["src/**/*", "test/**/*", "build.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
bitflags = "1.3.0"
const-cstr = "0.3.0"
libc = { path = "../libc", features = [ "extra_traits" ] }
#libc = { git = "http://github.com/asomers/libc.git", rev = "30d598fff", features = [ "extra_traits" ] }

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
nix = { version = "0.26.1", default_features = false, features = [ "ioctl", "process" ] }
tempfile = "3.0"
